// Database: Retail Business Database

Table customers {
  id integer [primary key]
  first_name varchar
  last_name varchar
  email varchar [unique]
  phone varchar
  created_at timestamp
  updated_at timestamp
}

Table products {
  id integer [primary key]
  name varchar
  description text
  price decimal
  stock_quantity integer
  created_at timestamp
  updated_at timestamp
}

Table salespeople {
  id integer [primary key]
  first_name varchar
  last_name varchar
  email varchar [unique]
  phone varchar
  hire_date timestamp
  created_at timestamp
  updated_at timestamp
}

Table sales {
  id integer [primary key]
  sale_date timestamp
  customer_id integer
  salesperson_id integer
  product_id integer
  quantity integer
  total_price decimal
  created_at timestamp
  updated_at timestamp
}

Ref: sales.customer_id > customers.id   // A sale is linked to a customer
Ref: sales.salesperson_id > salespeople.id   // A sale is linked to a salesperson
Ref: sales.product_id > products.id    // A sale is linked to a product
